# Model-Lab

./: .gitignore  README.md  SUPPORTED_MODELS.md  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/(app)/: layout.tsx
app/(app)/chat/: page.tsx
app/(auth)/: layout.tsx  page.tsx
app/api/chat/: route.ts
app/auth/callback/: route.ts
app/login/: page.tsx
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
components/: app-sidebar.tsx  chat-interface.tsx  chat-message.tsx  error-boundary.tsx  loading-dots.tsx  loading-spinner.tsx
hooks/: use-auto-resize-textarea.ts
lib/: format-message.ts  supabase.ts  types.ts
styles/: loading.module.css
supabase/: README.md  schema.sql
